--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="https://static.wixstatic.com/media/8d5d9b_0b007931dda9437fbd94ca47800a3ec5%7Emv2.png/v1/fill/w_192%2Ch_192%2Clg_1%2Cusm_0.66_1.00_0.01/8d5d9b_0b007931dda9437fbd94ca47800a3ec5%7Emv2.png" type="image/png">
     <!--- Google Fonts ---->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
